# dtcc-solar

./: .gitignore  CMakeLists.macos.ci  CMakeLists.txt  CMakeLists.windows.ci  README.md  pyproject.toml
.github/workflows/: ci-build-tests.yml  ci.yml
data/: faceRayFace.txt  listToPrint.txt  w_data_sub.txt  w_data_year.txt  w_data_year_epw.txt
data/misc/: Solar_irradiance_definitions.pages
data/models/: City.objbak  City.stl  City34k.stl  City66k.stl  CitySurface.vtu  CitySurfaceXS.stl  lozenets.stl
data/sunpaths/: helsinki.csv  oslo.csv  rio_de_janeiro.csv
data/validation/: box.gh  box_sharp_f1664.objbak  box_soft_f1664.objbak  boxes_sharp_f5248.objbak  boxes_soft_f5248.objbak  results_import.gh  validation_schedule.numbers
data/weather/: GBR_ENG_London.City.AP.037683_TMYx.2007-2021.epw  GBR_ENG_London.City.AP.037683_TMYx.2007-2021.pvsyst  GBR_ENG_London.City.AP.037683_TMYx.2007-2021.rain  GBR_ENG_London.City.AP.037683_TMYx.2007-2021.stat  GBR_ENG_London.City.AP.037683_TMYx.2007-2021.wea  SWE_ST_Stockholm.Arlanda.AP.024600_TMYx.2007-2021.clm  SWE_ST_Stockholm.Arlanda.AP.024600_TMYx.2007-2021.epw  SWE_VG_Gothenburg-Landvetter.AP.025260_TMYx.2007-2021.clm  SWE_VG_Gothenburg-Landvetter.AP.025260_TMYx.2007-2021.epw  synthetic.epw
data/weatherdata/: GBR_ENG_London.City.AP.037683_TMYx.2007-2021.clm  GBR_ENG_London.City.AP.037683_TMYx.2007-2021.ddy
docs/: Solar_irradiance_definitions.pages  definitions.md  installation.md  introduction.md
sandbox/: Testing.py  argparseTest.py  glooeytest.py  intersectionTrimesh.py  multiproc.py  ncollpydeTest.py  open3dTest.py  perez_test.py  plotTest.py  poolint.py  pooltest.py  scribbles.py  shading.py  sunpath.py  sunpath_vis.py  sunpathvis.py  sythetic_epw.py  test.py  test_sunpath_vis.py  timezones.py  tregenza.py  trimeshtest.py
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  common.h  embree_solar.cpp  embree_solar.h  logging.h  main.cpp  main.py  pydome.cpp  pydome.h  rays.cpp  rays.h  skycity.py  skydome.cpp  skydome.h  suncity.py  sunrays.cpp  sunrays.h  test_city.py  test_embree_skycity.py  test_embree_suncity.py
src/dtcc_solar/: __init__.py  city.py  city_solar.py  clm_data.py  coefficients.py  colors.py  combind_analysis.py  data_clm.py  data_epw.py  data_io.py  data_meteo.py  data_smhi.py  epw_data.py  interpolate.py  logging.py  mesh_compute.py  meteo_data.py  model.py  multi_skydomes.py  mysun.py  open_meteo_data.py  perez.py  perez_complete_coeffs.py  perez_simple_coeffs.py  plotting.py  radiance.py  raycasting.py  reinhart.py  reinhart2.py  reinhart4.py  results.py  shading.py  sky_analysis.py  skycylinder.py  skydome.py  skysphere.py  smhi_data.py  solar_engine.py  solar_model.py  solarviewer.py  (+14 more)
src/dtcc_solar/scripts/: main.py  run_solar.py
test/: test_dev.py  test_solar.py
test/data/sunpaths/: istanbul.csv  kiruna.csv  nyc.csv  sunpath_gothenburg_loops.csv  sunpath_kiruna.csv  sunpath_london.csv  sunpath_london_loops.csv  sunpath_luleå.csv  sunpath_nyc.csv  sunpath_oslo.csv  sunpath_stockholm.csv  sunpath_umeå.csv
test/python/: .coverage  test_solar.py  test_sunpath.py
tests/: run-tests
tests/cpp/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/data/models/: CitySurfaceM.stl  CitySurfaceS.stl
tests/data/sunpaths/: gothenburg.csv  london.csv  stockholm.csv
tests/python/: test_1.py  test_2.py  test_3.py  test_api_comparison.py  test_clm_data.py  test_dev.py  test_embree.py  test_embree_sky.py  test_embree_sun.py  test_epw_data.py  test_main.py  test_meteo_api.py  test_open_meteo_api.py  test_raytracing.py  test_skycylinder.py  test_skydome.py  test_skysphere.py  test_smhi_api.py  test_smhi_api_vis.py  test_solar.py  test_sundome.py  test_sunpath.py  test_sunpath_vis.py  test_sunquads.py
tools/ci/: bundle_embree_dylibs.py  inspect_py_embree.py
